corpus/classes.txt
================================================================================
class definition
================================================================================

class Test {

}

--------------------------------------------------------------------------------

(script
  (class
    (name)
    (body)
  )
)

================================================================================
parented class definition
================================================================================

class Test : Test2 {

}

--------------------------------------------------------------------------------

(script
  (class
    (name)
    (parent
       (identifier)
    )
    (body)
  )
)